Pin Next.js to 15.5.2 for @cloudflare/next-on-pages compatibility
Dependabot auto-merged Next.js 15.5.9, but @cloudflare/next-on-pages only
supports Next.js up to 15.5.2. This caused build failures.

Changes:
- Downgrade Next.js from 15.5.9 to 15.5.2
- Pin Next.js version (remove ^ to prevent auto-updates)
- Update Dependabot config to ignore Next.js versions > 15.5.2

Note: CVE-2025-66478 affects Next.js 15.x but does NOT affect Edge Runtime.
Our application uses Edge Runtime exclusively, so we are not vulnerable.

Once @cloudflare/next-on-pages adds support for Next.js 15.5.3+, we can
update both and remove the version pin.

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -11,6 +11,9 @@ updates:
     ignore:
       - dependency-name: "*"
         update-types: ["version-update:semver-major"]
+      # Pin Next.js to <= 15.5.2 until @cloudflare/next-on-pages adds support
+      - dependency-name: "next"
+        versions: ["> 15.5.2"]
     # Group dependency updates to reduce PR noise
     groups:
       production-dependencies:
