--- a/app/package.json
+++ b/app/package.json
@@ -8,7 +8,13 @@
     "deploy": "npm run build && wrangler pages deploy ./build/client",
     "preview": "npm run build && wrangler pages dev ./build/client",
     "typecheck": "react-router typegen && tsc",
-    "cf-typegen": "wrangler types"
+    "cf-typegen": "wrangler types",
+    "test": "vitest",
+    "test:ui": "vitest --ui",
+    "test:run": "vitest run",
+    "test:coverage": "vitest run --coverage",
+    "test:watch": "vitest watch",
+    "prepare": "husky"
   },
   "dependencies": {
     "@react-router/cloudflare": "7.11.0",
@@ -16,20 +22,30 @@
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
     "react-markdown": "^10.1.0",
-    "react-router": "7.11.0"
+    "react-router": "7.11.0",
+    "svix": "^1.82.0"
   },
   "devDependencies": {
     "@cloudflare/vite-plugin": "^1.19.0",
     "@react-router/dev": "7.11.0",
+    "@testing-library/jest-dom": "^6.9.1",
+    "@testing-library/react": "^16.3.1",
     "@types/node": "^22",
     "@types/react": "^19.2.7",
     "@types/react-dom": "^19.2.3",
+    "@vitejs/plugin-react": "^5.1.2",
+    "@vitest/coverage-v8": "^4.0.16",
+    "@vitest/ui": "^4.0.16",
     "autoprefixer": "^10.4.23",
+    "happy-dom": "^20.0.11",
+    "husky": "^9.1.7",
+    "lint-staged": "^16.2.7",
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.18",
     "typescript": "^5.9.2",
     "vite": "^7.1.7",
     "vite-tsconfig-paths": "^5.1.4",
+    "vitest": "^4.0.16",
     "wrangler": "^4.56.0"
   }
 }
